add field function + library

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 header,
 footer {
-    height: 60px;
+    height: 75px;
     background-color: #362221;
 
 }
@@ -16,17 +16,12 @@ body {
 }
 
 main {
-    height: calc(100vh - 120px);
-}
-
-header img{
-    width: 50px;
+    height: calc(100vh - 150px);
 }
 
 .btn-color{
     background-color: #F19213;
-    border: 2px solid #fff
-    ;
+    border: 2px solid #fff;
 }
 
 .form-select{
@@ -37,10 +32,10 @@ header img{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    width: 800px;
-    height: 800px;
-    background-color: #F2BC1B;
-    margin: 10px;
+    width: 650px;
+    height: 650px;
+    background-color: #C1AFAF;
+    margin: 65px;
 }
 
 .square {
@@ -54,9 +49,13 @@ header img{
 }
 
 .green {
-    background-color: greenyellow;
+    background-color: #F9C519;
 }
 
 .red{
     background-color: #BF3B15;
+}
+
+.heart{
+    color: red;
 }
